<resources>
    <string name="app_name">My Application</string>
    <string name="button_send">Something text</string>
    <string name="steps">Steps</string>

    <string name="exp">Exp:</string>
    <string name="gold">Gold:</string>
    <string name="lv">level</string>
    <string name="level">Lv:</string>
    <string name="gold_gained">Gold Gained:</string>
    <string name="exp_gained">Exp Gained:</string>
    <string name="_0">0</string>

</resources>