<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Text View for the "Steps" text displayed-->
    <TextView
        android:id="@+id/steps"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:text="@string/steps"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_stepsTaken"
        app:layout_constraintEnd_toEndOf="@+id/tv_stepsTaken"
        app:layout_constraintStart_toEndOf="@+id/tv_stepsTaken"
        app:layout_constraintTop_toBottomOf="@+id/button_send" />

    <TextView
        android:id="@+id/expText"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="117dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="472dp"
        android:text="@string/exp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelText" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="12dp"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/expText"
        app:layout_constraintEnd_toStartOf="@+id/level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="34dp"
        android:layout_marginEnd="175dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/levelText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goldText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="228dp"
        android:text="@string/gold"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_send"
        app:layout_constraintEnd_toStartOf="@+id/gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="175dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/goldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goldText" />

    <TextView
        android:id="@+id/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="175dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expText"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <TextView
        android:id="@+id/tv_stepsTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="37sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps" />

    <!--The to quests button-->
    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="switchToQuests"
        android:text="To Quests"
        app:layout_constraintBottom_toTopOf="@+id/steps"
        app:layout_constraintStart_toStartOf="@+id/steps"
        app:layout_constraintTop_toBottomOf="@+id/goldText" />


</androidx.constraintlayout.widget.ConstraintLayout>